Fix layout issue in theme.

--- a/content/themes/print/style.less
+++ b/content/themes/print/style.less
@@ -119,7 +119,7 @@ section h1 {
         max-width: 55em;
     }
 
-    .half:nth-of-type(odd) {
+    .half:nth-of-type(even) {
         float: right;
     }
 
